[package]
name = "bgtools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
bio-anno-rs = { git = "https://github.com/jwschroeder3/bio-anno-rs.git" }
